nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: default
 annotations:
         #  nginx.ingress.kubernetes.io/rewrite-target: /$2
         # kubernetes.io/ingress.class: "nginx"
spec:
 ingressClassName: nginx
 rules:
#  - host: app.com
  - http:
      paths:
        - path: / 
          pathType: Prefix
          backend:
            service:
              name: react
              port:
                number: 3000
        - path: /stats
          pathType: Prefix
          backend:
            service:
              name: webapp
              port:
                number: 5000

                # 
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
  # name: nginx-ingress
# spec:
  # rules:
    # - http:
        # paths:
        # - backend:
            # service:
              # name: react
              # port: 
                # number: 3000
          # path: /
          # pathType: Exact
